<resources>
    <string name="app_name">OxygenScanner</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="scan_again">Scan Again</string>
    <string name="stop_scan">Stop scan</string>
    <string name="fullName">Full Name</string>
    <string name="lastname">Last Name</string>
    <string name="start">Start</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="send_otp">Send Otp</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="need_to_signup">Click to signup</string>
    <string name="enter_mobile_number">Ente mobile number</string>
    <string name="enter_valid_phone_number">Enter valid mobile number</string>
    <string name="select_gender">Select gender</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="register_sucesffuly">Register successfully, you can login now.</string>
    <string name="opt_send">Otp send successfully</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="remember_me">Remember me</string>
    <string name="logout">Logout</string>
    <string name="banner_unit_id">ca-app-pub-1491257039649212/2520191012</string>
    <string name="warning">WARNING \nThis result is not accurate as original oximeter.</string>
</resources>